2007-01-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* xtests/Makefile.am: Add new pam_unix.so tests
	* xtests/run-xtests.sh: Prefer shell scripts (wrapper)
	over binaries.
	* xtests/tst-pam_cracklib1.c: Fix typo.
	* xtests/tst-pam_unix1.c: New, for sucurity fix.
	* xtests/tst-pam_unix1.pamd: New.
	* xtests/tst-pam_unix1.sh: New.
	* xtests/tst-pam_unix2.c: New, for crypt checks.
	* xtests/tst-pam_unix2.pamd: New.
	* xtests/tst-pam_unix2.sh: New.
	* xtests/tst-pam_unix3.c: New, for bigcrypt checks.
	* xtests/tst-pam_unix3.pamd: New.
	* xtests/tst-pam_unix3.sh: New.

2007-01-23  Thorsten Kukuk  <kukuk@suse.de>

	* release 0.99.7.1

	* configure.in: Set version number to 0.99.7.1

2007-01-23  Thorsten Kukuk  <kukuk@thukuk.de>
	    Tomas Mraz  <t2m@centrum.cz>

	* modules/pam_unix/support.c (_unix_verify_password): Always
	compare full encrypted passwords (CVE-2007-0003).

2007-01-23  Tomas Mraz  <t8m@centrum.cz>

	* modules/pam_loginuid/Makefile.am (AM_LDFLAGS): Add LIBAUDIT.

	* modules/pam_selinux/Makefile.am (pam_selinux_check_LDFLAGS): Add
	AM_LDFLAGS.
	(pam_selinux_la_LDFLAGS): Likewise.

2007-01-17  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release 0.99.7.0

	* configure.in: Set version number to 0.99.7.0

	* Makefile.am (M4_FILES): Replace GNU make extension by listing
	all m4 files.

2007-07-17  Tomas Mraz  <t8m@centrum.cz>

	* po/*.po: Updated strings to translate.
	* po/Linux-PAM.pot: Likewise.

2007-07-16  Thorsten Kukuk  <kukuk@thkukuk.de>

	* doc/man/pam.conf-syntax.xml: Improve documentation about
	sufficient keyword (Patch by Petteri Räty <betelgeuse@gentoo.org>)

2006-12-20  Thorsten Kukuk  <kukuk@thkukuk.de>

	* modules/pam_unix/pam_unix_passwd.c (pam_sm_chauthtok): Forbid
	only '+' and '-' as first characters for account names.
	* modules/pam_unix/pam_unix_auth.c (pam_sm_authenticate): Likewise.

2006-12-18  Thorsten Kukuk  <kukuk@thkukuk.de>

	* configure.in: Fix ENOKEY check (specify errno.h as header
	file to search in).
